--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coreui/coreui-free-laravel-admin-template",
   "version": "2.0.1",
-  "description": "CoreUI Free Laravel Bootstrap Admin Template",
+  "description": "CMS",
   "keywords": [
     "admin",
     "admin panel",
