--- a/package.json
+++ b/package.json
@@ -68,27 +68,27 @@
     "@fullcalendar/bootstrap": "^4.4.0",
     "@fullcalendar/core": "^4.4.0",
     "@fullcalendar/daygrid": "^4.4.0",
+    "axios": "^0.19.0",
     "bootstrap-daterangepicker": "^3.0.5",
     "chart.js": "^2.9.3",
     "codemirror": "^5.54.0",
+    "core-js": "^3.2.1",
+    "cropperjs": "^1.5.6",
     "datatables.net-bs4": "^1.10.21",
+    "flag-icon-css": "^3.4.2",
+    "ion-rangeslider": "~2.2.0",
     "jquery": "^3.5.1",
     "jquery-ui-dist": "^1.12.1",
     "jquery-validation": "^1.19.1",
     "jquery.maskedinput": "^1.4.1",
     "ladda": "^1.0.6",
+    "laravel-mix": "^5.0.0",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
     "quill": "^1.3.7",
     "select2": "^4.0.13",
     "spinkit": "^1.2.5",
-    "toastr": "^2.1.4",
-    "axios": "^0.19.0",
-    "core-js": "^3.2.1",
-    "flag-icon-css": "^3.4.2",
-    "ion-rangeslider": "~2.2.0",
-    "laravel-mix": "^5.0.0",
-    "cropperjs": "^1.5.6"
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
